[project]
name = "yalistening"
version = "1.0.1"
description = "An open-source Yandex Music module for the Telegram messenger."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kurigram>=2.2.13",
    "rich>=14.2.0",
    "tgcrypto>=1.2.5",
    "websocket-client>=1.9.0",
    "yandex-music>=2.2.0",
]
